--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,24 +2,25 @@ name: '[Main] Environment deploy'
 
 on:
   push:
-    branches: ['main']
+    branches:
+      -main
 
 jobs:
   deploy:
     runs-on: ubuntu-18.04
 
     steps:
-      - name: Build project
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: '16.x'
+      - name: Build app
         run: |
           npm ci
           npm run build
         
-      - name: Deploy on branch
+      - name: Deploy app
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+          publish_dir: ./deploy
