--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pokedex",
-  "hostname": "https://ze-pena.github.io/pokedex/",
+  "homepage": "https://ze-pena.github.io/pokedex/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
